<resources>
    <string name="app_name">DojoCam</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Entrenamiento</string>
    <string name="title_notifications">Estadísticas</string>
    <string name="title_profile">Perfil</string>

    <string name="ConectionError">Ha ocurrido un error de conexión.</string>
    <string name="preference_file_key">VIDEO_STORAGE</string>
    <string name="preference_image_key">IMAGE_STORAGE</string>

    <!-- Login Activity Strings -->
    <string name="requiredEmail">El email es requerido</string>
    <string name="emailInUse">El email ya esta en uso</string>
    <string name="weekPass">Su contraseña es muy débil</string>
    <string name="passDontMatch">Sus contraseñas no coinciden</string>

    <!-- Login Strins -->
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="noAccount">¿No tienes cuenta?</string>
    <string name="register">Registrarse</string>
    <string name="LoginForgottenLabel">¿Ha olvidado su contraseña?</string>
    <string name="LoginForgotten">¡Presiona Aquí!</string>
    <string name="LoginEmailRequest">Ingrese su Email</string>
    <string name="LoginEmailRequestHint">abc@company.com</string>
    <string name="LoginEmailNotify">Se ha enviado un link a su correo para restablecer su contraseña.</string>
    <string name="NoUser">No se han encontrado credenciales.</string>

    <string name="AppClientId">127635168063-rhklqv0nkingflqob0r5vijqi8sn6rla.apps.googleusercontent.com</string>


    <!-- register Strings -->
    <string name="imagenRegister">register image</string>
    <string name="nameInput">Nombre</string>
    <string name="lastnameInput">Apellido</string>
    <string name="confirmPassword">Repetir Contraseña</string>

    <string name="RegisterDefaultDate">--/--/--</string>
    <string name="RegisterBirthDateLabel">Nacimiento:</string>
    <string name="RegisterHeightLabel">Altura:</string>
    <string name="DefaultNumber">--</string>
    <string name="RetgisterWeightLabel">Peso:</string>
    <string name="SexLabel">Sexo:</string>
    <string-array name="sexOptions">
        <item>Femenino</item>
        <item>Masculino</item>
        <item>Omitir</item>
    </string-array>
    <string name="RegisterSaveLabel">Guardar</string>

    <!-- Dialogs -->
    <string name="heightUnit">cm</string>
    <string name="weightUnit">kg</string>

    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>

    <!-- profile Strings -->
    <string name="logout">Cerrar Sesión</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>

    !-- Strings used for fragments for navigation -->
    <string name="login_label">Inicio Sesión</string>
    <string name="register_label">Registro</string>
    <string name="register_detail_label">Perfil</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="sp_saved_credential">SP_FB_CREDENTIAL</string>
    <string name="sp_saved_user">SP_FB_USER</string>
    <string name="sp_saved_name">SP_NAME_LASTNAME</string>

    //Nuevos

    <string name="tfe_pe_app_name">TFL Pose Estimation</string>
    <string name="tfe_pe_request_permission">This app needs camera permission.</string>
    <string name="tfe_pe_tv_score">Score: %.2f</string>
    <string name="tfe_pe_tv_model">Model: </string>
    <string name="tfe_pe_tv_fps">Fps: %d</string>
    <string name="tfe_pe_tv_device">Device: </string>
    <string name="tfe_pe_tv_classification_value">- %s</string>
    <string name="close_to_camera">Estas muy cerca de la cámara</string>
    <string name="body_not_found">No te encuentro, prueba más ilumincación</string>


    <string-array name="tfe_pe_models_array">
        <item>Movenet Lightning</item>
        <item>Movenet Thunder</item>
        <item>Posenet</item>
    </string-array>

    <string-array name="tfe_pe_device_name">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>


    //Nuevos2.0
    <string name="dif_principiante">Principiante</string>
    <string name="dif_medio">Intermedio</string>
    <string name="dif_avanzado">Avanzado</string>
    <string name="dif_start">Practicar</string>
    <string name="dificultades">Dificultades</string>
    <string name="ejercicios">Ejercicios</string>
    <string name="dif_recomendado">Bienvenido a DojoCam</string>
    <string name="dia">Dia</string>
    <string name="mes">Mes</string>
    <string name="semana">Semana</string>
    <string name="anio">Año</string>
    <string name="calorias">Calorias</string>
    <string name="porcen_tiempo_act">% de tiempo Activo</string>
    <string name="tiempo_ejercicio">Tiempo de Ejecicio</string>
    <string name="statisticsPoints">Postura</string>
    <string name="postura">Postura</string>
    <string name="statisticsPerformance">Porcentaje de Logro</string>
    <string name="statisticsTime">Tiempo de Ejercicio</string>
    <string name="puntuacion">Puntuación</string>


    // prefil
    <string name="sexo">Sexo:</string>
    <string name="nacimiento">Nacimiento:</string>
    <string name="altura">Altura:</string>
    <string name="peso">Peso:</string>
    <string name="btn_actualizar">Actualizar:</string>
    <string name="btn_cerrar">Cerrar Sesión:</string>

    //dashboard
    <string name="nombre_recomendado">Defensa Alta</string>
    <string name="pregunta">¿Qué quieres hacer hoy?</string>
    <string name="tecnica">Técnica</string>
    <string name="fisico">Practicar</string>


    //ex_de
    <string name="nombre_tecnica">Ejercicio</string>
    <string name="str_descripcion">Descripción</string>
    <string name="str_respuesta">Respuesta</string>
    <string name="descripcion_tecnica">d</string>
    <string name="btn_start">Empezar</string>
    <string name="chat">Chat</string>

    //Notifications
    <string name="BestScore">Mejor Puntaje</string>
    <string name="TimesDone">Veces Hecho</string>


</resources>