<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoginFragment">

    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.pinneapple.dojocam_app.Login.LoginFragment"
        android:label="@string/login_label"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_LoginFragment_to_RegisterFragment"
            app:destination="@id/RegisterFragment" />
    </fragment>
    <fragment
        android:id="@+id/RegisterFragment"
        android:name="com.pinneapple.dojocam_app.Login.RegisterFragment"
        android:label="@string/register_label"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_RegisterFragment_to_RegisterDetailsFragment"
            app:destination="@id/RegisterDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/RegisterDetailsFragment"
        android:name="com.pinneapple.dojocam_app.Login.RegisterDetailsFragment"
        android:label="@string/register_detail_label"
        tools:layout="@layout/fragment_register_details"/>


</navigation>