<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pdetail">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/excersiceTitle"
            android:layout_width="match_parent"
            android:layout_height="147dp"
            android:gravity="center"
            android:text="@string/nombre_tecnica"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/str_respuesta"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="384dp"
            android:background="@color/second_bg"
            android:elevation="10dp"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="165dp"
                android:text="@string/descripcion_tecnica"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_start" />

                <Button
                    android:id="@+id/buttonNeg"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/btn_start" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>