<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <ImageView
                android:id="@+id/DojoCamLogoLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:src="@drawable/dojocam_transparent"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/LoginAppName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="#000000"
                android:textSize="48sp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/RegisterEmailMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginVertical="1dp"
                android:layout_marginHorizontal="40dp"
                android:textAlignment="center"
                android:textColor="@color/danger" />
            <EditText
                android:id="@+id/RegisterEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:layout_marginBottom="5dp"
                android:layout_marginHorizontal="20dp"
                android:inputType="textEmailAddress"
                android:autofillHints="@string/email" />

            <TextView
                android:id="@+id/RegisterPasswordMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginVertical="1dp"
                android:layout_marginHorizontal="40dp"
                android:textAlignment="center"
                android:textColor="@color/danger" />
            <EditText
                android:id="@+id/RegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:autofillHints="@string/password" />

            <TextView
                android:id="@+id/RegisterConfirmPasswordMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginVertical="1dp"
                android:layout_marginHorizontal="40dp"
                android:textAlignment="center"
                android:textColor="@color/danger" />
            <EditText
                android:id="@+id/RegisterConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword"
                android:autofillHints="@string/confirmPassword" />

            <Button
                android:id="@+id/RegisterSubmit"
                android:backgroundTint="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="50dp"
                android:text="@string/register"
                tools:targetApi="lollipop" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>