<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Perfil">

    <Button
        android:id="@+id/AddFriend2"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginTop="-100dp"
        android:backgroundTint="@color/purple_200"
        android:layout_gravity="center"
        android:text="Buscar Amigos"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout


            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />



            <ImageView
                android:id="@+id/ProfileImage"
                android:layout_gravity="center"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:background="@color/black"
                tools:src="@tools:sample/avatars"
                android:contentDescription="@string/imagenRegister" />
<!--
            <ImageView
                android:id="@+id/ProfileImagePen"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-50dp"
                android:layout_marginRight="-65dp"
                android:background="#919191"
                android:src="@android:drawable/ic_menu_edit"
                android:contentDescription="@string/imagenRegister"
                android:layout_marginEnd="-65dp" />
!-->
            <EditText
                android:id="@+id/ProfileFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:layout_marginHorizontal="20dp"/>

            <EditText
                android:id="@+id/ProfileLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="18sp"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="20dp"
                android:paddingHorizontal="5dp">
                <TextView
                    android:id="@+id/ProfileSexLabel"
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:ems="10"
                    android:textSize="18sp"
                    android:text="@string/sexo" />

                <Spinner
                    android:id="@+id/ProfileSexSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="20dp"
                android:paddingHorizontal="5dp">
                <TextView
                    android:id="@+id/ProfileBirthDateLabel"
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:ems="10"
                    android:textSize="18sp"
                    android:text="@string/nacimiento" />
                <TextView
                    android:id="@+id/ProfileBirthDate"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:ems="10"
                    android:textSize="20sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="20dp"
                android:paddingHorizontal="5dp">
                <TextView
                    android:id="@+id/ProfileHeightLabel"
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:ems="10"
                    android:textSize="18sp"
                    android:text="@string/altura" />
                <EditText
                    android:id="@+id/ProfileHeight"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:gravity="center"
                    android:ems="10"
                    android:textSize="20sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="20dp"
                android:paddingHorizontal="5dp">
                <TextView
                    android:id="@+id/ProfileWeightLabel"
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:ems="10"
                    android:textSize="18sp"
                    android:text="@string/peso" />
                <EditText
                    android:id="@+id/ProfileWeight"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:gravity="center"
                    android:ems="10"
                    android:textSize="20sp" />
            </LinearLayout>
            <Button
                android:id="@+id/ProfileUpdatebutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_200"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="50dp"
                android:text="@string/btn_actualizar" />

            <Button
                android:id="@+id/ProfileLogoutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/danger"
                android:text="@string/btn_cerrar" />

            <FrameLayout
                android:id="@+id/contentFragment"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>