<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:background="#3A8AC0">

                <RadioButton
                    android:id="@+id/radio_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:text="@string/dia"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center" />

                <RadioButton
                    android:id="@+id/radio_week"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:text="@string/semana"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center" />

                <RadioButton
                    android:id="@+id/radio_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:text="@string/mes"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1" >

            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:hint="Ejercicios"
                android:layout_weight="1">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:text="Ejercicio" />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginBottom="10dp" />

            <EditText
                android:id="@+id/editTextPostura"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:editable="false"
                android:ems="10"
                android:inputType="none"
                android:text="@string/postura" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/barChart"
                android:layout_width="match_parent"
                android:layout_height="1000px" />



        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>